all month/week/day components linked with correct shifts

--- a/client/components/shifts/month/shifts-month.css
+++ b/client/components/shifts/month/shifts-month.css
@@ -6,6 +6,7 @@
 }
 .calendarShiftContainer a:hover{
   color: blue;
+  font-weight: normal;
 }
 .monthTable {
   width: 50%;
